fixed some display on viewpost textBox
hide the scroll and fixed if it too long width wise

--- a/css/header.css
+++ b/css/header.css
@@ -143,7 +143,7 @@ a {
 /* Footer */
 footer p {
   margin-top: 10px;
-  position: relative;
+  position: fixed;
   text-align: right;
   border-top: solid #dcdcdc;
   left: 0px;
