--- a/css/home.css
+++ b/css/home.css
@@ -27,6 +27,7 @@
   bottom: 0;
   left: 35px;
   position: absolute;
+  color: black;
 }
 
 /* On hover, add a black background color with a little bit see-through */
