--- a/css/myPage.css
+++ b/css/myPage.css
@@ -28,16 +28,12 @@ p.postNum::after {
 }
 #post-gallery {
   display: grid;
-  grid-template-columns: repeat(
-    auto-fit,
-    320px
-  ); /*it will auto resize itself and fits the caraccordinly */
+  grid-template-columns: repeat(auto-fit, 320px);
   justify-content: center;
   column-gap: 20px;
-  max-width: 1000px; /*makes it only 3 card a page [max]*/
+  max-width: 1000px;
   width: 100%;
   row-gap: 20px;
-
   margin: auto;
   padding: 0;
 }
